Change OG tags to be video-centric.

--- a/workouts/10.html
+++ b/workouts/10.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>tallyrye's Full Body Resistance Band Workout</title>
     <meta name="description" content="Full Body Resistance Band Workout from @tallyrye: " />
     <meta name="author" content="@tallyrye (EAT • TRAIN • HAPPY \nIntuitive + Health First Fitness 💛\n•  📚My book TRAIN HAPPY out now\n• 🎧 @trainhappypodcast \n• Fit & Fearless Podcast @thegirlgains)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Full Body Resistance Band Workout from @tallyrye">
     <meta property="og:description" content="I recommend using a band with a medium/ heavy or even x-heavy resistance! ⁣
 ⁣
 🎧 SOUND ON for coaching tips!
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/468217408.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/8b56124d-8704-4afb-a75a-6eb73edd026a-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/10">
     <meta name="twitter:title" content="Full Body Resistance Band Workout from @tallyrye">
     <meta name="twitter:description" content="I recommend using a band with a medium/ heavy or even x-heavy resistance! ⁣
@@ -65,7 +70,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/468217408.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/8b56124d-8704-4afb-a75a-6eb73edd026a-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/8b56124d-8704-4afb-a75a-6eb73edd026a-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
