--- a/workouts/11.html
+++ b/workouts/11.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>laurabiceps's DB DT Conditioning Finisher</title>
     <meta name="description" content="DB DT Conditioning Finisher from @laurabiceps: " />
     <meta name="author" content="@laurabiceps (🏋🏼‍♀️ PT @foundryfit \n📖 No1. Best-selling Author ‘LIFT YOURSELF’\n🎙 Podcast ‘Biceps & Banter’\n🙋🏼‍♀️ TEAM LIFTED Online Coaching\n📱 Trainer @fiit)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="DB DT Conditioning Finisher from @laurabiceps">
     <meta property="og:description" content="As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/195101119.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/5462f41c-b458-4d35-aabf-83db42478930-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/11">
     <meta name="twitter:title" content="DB DT Conditioning Finisher from @laurabiceps">
     <meta name="twitter:description" content="As we continue to try and make waves with limited kit at home, I’ve spent a lot of my time doing higher rep, more conditioning style work.">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/195101119.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/5462f41c-b458-4d35-aabf-83db42478930-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/5462f41c-b458-4d35-aabf-83db42478930-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
