--- a/workouts/13.html
+++ b/workouts/13.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>fitmoral's NO EQUIPMENT HIIT</title>
     <meta name="description" content="NO EQUIPMENT HIIT from @fitmoral: " />
     <meta name="author" content="@fitmoral (👟 Sportswear Brand @deltawoos \n📡 Advertising Agency @leadsnetwork.io\n🍵 Smoothie Detox @tastesmoothies\n⬇️ Shoutouts and Campaign Plannings on IG ⬇️)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="NO EQUIPMENT HIIT from @fitmoral">
     <meta property="og:description" content="Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/6648540058.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/e8ed580d-b482-4153-ac2c-a9209a61e40c-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/13">
     <meta name="twitter:title" content="NO EQUIPMENT HIIT from @fitmoral">
     <meta name="twitter:description" content="Here’s a quick hiit workout that’ll get you sweaty real quick! super fun, super effective 🔥
@@ -61,7 +66,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/6648540058.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/e8ed580d-b482-4153-ac2c-a9209a61e40c-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/e8ed580d-b482-4153-ac2c-a9209a61e40c-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
