--- a/workouts/14.html
+++ b/workouts/14.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>niknaidoo's ARMS 🔥</title>
     <meta name="description" content="ARMS 🔥 from @niknaidoo: " />
     <meta name="author" content="@niknaidoo (💻 Online Lifestyle Coach\nSenior Instructor @barrysuk\nTrainer @underarmouruk \n🎙 Alive Present & Strong Podcast\n#alivepresentstrong\nSign up now 👇🏼)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="ARMS 🔥 from @niknaidoo">
     <meta property="og:description" content="Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/53074968.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/951a27db-70e0-459e-b943-fabc4419fe5e-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/14">
     <meta name="twitter:title" content="ARMS 🔥 from @niknaidoo">
     <meta name="twitter:description" content="Another simple EMOM (every minute on the minute) workout. No breaks in between sections, straight into the next, get your equipment all ready to go.⁣">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/53074968.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/951a27db-70e0-459e-b943-fabc4419fe5e-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/951a27db-70e0-459e-b943-fabc4419fe5e-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
