--- a/workouts/15.html
+++ b/workouts/15.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>adaylorfit's 5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊</title>
     <meta name="description" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit: " />
     <meta name="author" content="@adaylorfit (🤓 We like Fitness and being weird\n💟 Body Confidence | Positive Vibes \n👀 6’3 | 5’3 \n📍 Kent 🌤\n⤵️ Links to save some💰)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit">
     <meta property="og:description" content="What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/19283384088.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/8b5f51bd-8cd8-40ea-86eb-dd2a7cc060a9-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/15">
     <meta name="twitter:title" content="5️⃣0️⃣0️⃣ REP HIIT CHALLENGE 👊 from @adaylorfit">
     <meta name="twitter:description" content="What better way to get your weekend started than jumping into a killer 500 rep HIIT workout 🙌 Grab some water (lots of it 😅), a yoga mat (or your choice of floor) and lets GET IT!! 🔥">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/19283384088.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/8b5f51bd-8cd8-40ea-86eb-dd2a7cc060a9-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/8b5f51bd-8cd8-40ea-86eb-dd2a7cc060a9-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
