--- a/workouts/16.html
+++ b/workouts/16.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>miap_fit's BACK AND BIS WORKOUT 💪🏼</title>
     <meta name="description" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit: " />
     <meta name="author" content="@miap_fit (23 🙋🏼‍♀️\nBristol UK 📍\nWorkouts | Meal Ideas | Progress Pics 💪🏼\nHere to motivate and promote a positive journey 🌸)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit">
     <meta property="og:description" content="I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/32506946512.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/ee2af7a5-d856-4502-8a11-07e1806f35b1-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/16">
     <meta name="twitter:title" content="BACK AND BIS WORKOUT 💪🏼 from @miap_fit">
     <meta name="twitter:description" content="I’m not too keen on working back so I’ve been training it with biceps (which I love) recently to enjoy it more 😊">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/32506946512.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/ee2af7a5-d856-4502-8a11-07e1806f35b1-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/ee2af7a5-d856-4502-8a11-07e1806f35b1-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
