--- a/workouts/17.html
+++ b/workouts/17.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>faisalpmafitness's PLANK CORE WORKOUT</title>
     <meta name="description" content="PLANK CORE WORKOUT from @faisalpmafitness: " />
     <meta name="author" content="@faisalpmafitness (Fitness Coach\nCelebrity Trainer\nBestselling Author: The PMA Method \n@noccouk Ambassador)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="PLANK CORE WORKOUT from @faisalpmafitness">
     <meta property="og:description" content="I love ending my sessions with some abs.
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/269669410.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/89b93a3f-99b1-4e7f-8a78-63396bc1429d-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/17">
     <meta name="twitter:title" content="PLANK CORE WORKOUT from @faisalpmafitness">
     <meta name="twitter:description" content="I love ending my sessions with some abs.
@@ -61,7 +66,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/269669410.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/89b93a3f-99b1-4e7f-8a78-63396bc1429d-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/89b93a3f-99b1-4e7f-8a78-63396bc1429d-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
