--- a/workouts/18.html
+++ b/workouts/18.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>hiitburn's ARMS 💪 & LEGS 🔥⁣⁣</title>
     <meta name="description" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn: " />
     <meta name="author" content="@hiitburn (🔥High Intensity Workouts\n💡Co-Founders Dennis + Kelsey\n💕Coach: @thedailykelsey \n👇GET TONED & DEFINED🔥)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn">
     <meta property="og:description" content="If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1948126538.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/2ea153b0-f7cb-43f5-ab07-648b9652b034-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/18">
     <meta name="twitter:title" content="ARMS 💪 & LEGS 🔥⁣⁣ from @hiitburn">
     <meta name="twitter:description" content="If you need to get in some movement, this is the workout for you! It hits both your upper and lower body, so let’s get it 🔥⁣⁣ Rest as needed.
@@ -61,7 +66,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/1948126538.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/2ea153b0-f7cb-43f5-ab07-648b9652b034-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/2ea153b0-f7cb-43f5-ab07-648b9652b034-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
