--- a/workouts/19.html
+++ b/workouts/19.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>primal.swoledier's Kettlebell and Bodyweight Burner</title>
     <meta name="description" content="Kettlebell and Bodyweight Burner from @primal.swoledier: " />
     <meta name="author" content="@primal.swoledier (‪ @onnit Kettlebell Coach \n🔥Subscribe to My Daily Workouts\n‪🔥Courses & Programs ‬\n👉🏽Follow @primal.methods\n👇🏽 8-Week Single Kettlebell Program)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Kettlebell and Bodyweight Burner from @primal.swoledier">
     <meta property="og:description" content="Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1426793957.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/d7282b2c-12c5-4a53-8d80-0f7d7a5ef4f8-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/19">
     <meta name="twitter:title" content="Kettlebell and Bodyweight Burner from @primal.swoledier">
     <meta name="twitter:description" content="Get after this one in your next workout! I love hitting this one after a 20-30 minute run 🔥
@@ -61,7 +66,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/1426793957.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/d7282b2c-12c5-4a53-8d80-0f7d7a5ef4f8-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/d7282b2c-12c5-4a53-8d80-0f7d7a5ef4f8-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
