--- a/workouts/22.html
+++ b/workouts/22.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>brickbuiltstrength's BRICKBUILT WEEKEND CORE WORKOUT!</title>
     <meta name="description" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength: " />
     <meta name="author" content="@brickbuiltstrength (An online based company with personalized programming to change the look,feel and performance for your body from elite coaching. DM for more info 📲💻)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength">
     <meta property="og:description" content="In our programming we train some form of core everyday, it is a foundational piece in our progression!">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/6936520616.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/79503455-2387-4a19-bd16-ff7019577d9d-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/22">
     <meta name="twitter:title" content="BRICKBUILT WEEKEND CORE WORKOUT! from @brickbuiltstrength">
     <meta name="twitter:description" content="In our programming we train some form of core everyday, it is a foundational piece in our progression!">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/6936520616.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/79503455-2387-4a19-bd16-ff7019577d9d-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/79503455-2387-4a19-bd16-ff7019577d9d-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
