--- a/workouts/23.html
+++ b/workouts/23.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>kimfrench87's MIGHTY HIIT/ABS</title>
     <meta name="description" content="MIGHTY HIIT/ABS from @kimfrench87: " />
     <meta name="author" content="@kimfrench87 (▪️NASM CPT\n▪️ @kimfrenchfitness \n⬇️ Fitness Plans, Resistance Bands, Gym Gear\n▪️ @nvgtn Athlete 💪🏻\n▪️ @womensbest 💕\n▪️ YouTube - Kim French)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="MIGHTY HIIT/ABS from @kimfrench87">
     <meta property="og:description" content="5 POWERFUL MOVEMENTS
 0 Excuses!!!
 Bodyweight only HIIT and core 🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/215128212.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/3bbd058f-1e56-4f07-83df-89b056d62fc7-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/23">
     <meta name="twitter:title" content="MIGHTY HIIT/ABS from @kimfrench87">
     <meta name="twitter:description" content="5 POWERFUL MOVEMENTS
@@ -63,7 +68,7 @@ Bodyweight only HIIT and core 🔥">
             poster="https://verkout-app-media.s3.amazonaws.com/images/215128212.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/3bbd058f-1e56-4f07-83df-89b056d62fc7-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/3bbd058f-1e56-4f07-83df-89b056d62fc7-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
