--- a/workouts/24.html
+++ b/workouts/24.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>jillsaundersfit's Full UPPER BODY HIIT workout 💪🏼</title>
     <meta name="description" content="Full UPPER BODY HIIT workout 💪🏼 from @jillsaundersfit: " />
     <meta name="author" content="@jillsaundersfit (📍 Sunshine Coast, BC\n✖️Macros + CPT + IG Live Workouts\n🔥 High Intensity Resistance Training\n💦1 on 1 Training w/ Private Studio on the Sunshine Coast)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Full UPPER BODY HIIT workout 💪🏼 from @jillsaundersfit">
     <meta property="og:description" content="Dumbbell Only + Extra Sweaty 💦
 This. Was. Killer.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/9612009017.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/0630271c-a181-4b84-a44c-0719926d4bed-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/24">
     <meta name="twitter:title" content="Full UPPER BODY HIIT workout 💪🏼 from @jillsaundersfit">
     <meta name="twitter:description" content="Dumbbell Only + Extra Sweaty 💦
@@ -61,7 +66,7 @@ This. Was. Killer.">
             poster="https://verkout-app-media.s3.amazonaws.com/images/9612009017.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/0630271c-a181-4b84-a44c-0719926d4bed-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/0630271c-a181-4b84-a44c-0719926d4bed-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
