--- a/workouts/25.html
+++ b/workouts/25.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>spinsyddy's TOTAL BODYWEIGHT TABATA</title>
     <meta name="description" content="TOTAL BODYWEIGHT TABATA from @spinsyddy: " />
     <meta name="author" content="@spinsyddy (#HomeWorkouts you can do anytime + no equipment needed\nNutritionist who loves to eat\nAthlete @underarmourwomen\nCannabiz @restartcbd \n[SUBSCRIBE ON YT])" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="TOTAL BODYWEIGHT TABATA from @spinsyddy">
     <meta property="og:description" content="🔥 you know it’s a good one when the vein in your forehead makes an appearance 😅">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/2110625039.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/15b8cd80-3f61-4ce8-b62e-cfe9f0fdb5c5-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/25">
     <meta name="twitter:title" content="TOTAL BODYWEIGHT TABATA from @spinsyddy">
     <meta name="twitter:description" content="🔥 you know it’s a good one when the vein in your forehead makes an appearance 😅">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/2110625039.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/15b8cd80-3f61-4ce8-b62e-cfe9f0fdb5c5-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/15b8cd80-3f61-4ce8-b62e-cfe9f0fdb5c5-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
