--- a/workouts/28.html
+++ b/workouts/28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>paulsklarxfit's Back, Shoulders, Core, and Cardio</title>
@@ -11,9 +11,14 @@ Former World Ranked Pro Duathlete
 Owner @prescriptive.fitness
 @sandysklarxfit 
 ⬇️SUBSCRIBE to PaulSklarXFit365 ⬇️)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Back, Shoulders, Core, and Cardio from @paulsklarxfit">
     <meta property="og:description" content="⁣⁣Body Changing Shred Session⚔️ This was a portion of my daily program PaulSklarXFit365. It’s exactly what I do, rep for rep, set for set. Are you Ready to change your body and your mind set? Subscribe in my bio👈⁣⁣">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/0d4d3034-3630-4116-adae-933c8b6f3cea-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/28">
     <meta name="twitter:title" content="Back, Shoulders, Core, and Cardio from @paulsklarxfit">
     <meta name="twitter:description" content="⁣⁣Body Changing Shred Session⚔️ This was a portion of my daily program PaulSklarXFit365. It’s exactly what I do, rep for rep, set for set. Are you Ready to change your body and your mind set? Subscribe in my bio👈⁣⁣">
@@ -63,7 +68,7 @@ Owner @prescriptive.fitness
             poster="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/0d4d3034-3630-4116-adae-933c8b6f3cea-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/0d4d3034-3630-4116-adae-933c8b6f3cea-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
