--- a/workouts/6.html
+++ b/workouts/6.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>spinsyddy's Full Body HIIT</title>
     <meta name="description" content="Full Body HIIT from @spinsyddy: " />
     <meta name="author" content="@spinsyddy (IG LIVE #homeworkout M/W/F @ 6:30AM CST\nNutritionist + CPT 🇮🇷 🇺🇸\nAthlete @underarmourwomen\nCannabiz @restartcbd \nYouTube Sydney Torabi [SUBSCRIBE])" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Full Body HIIT from @spinsyddy">
     <meta property="og:description" content="This mornings IG LIVE went a little something like this. The last 5 minutes were CHALLENGING!
 
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/2110625039.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/f47e8872-f264-4958-a46a-db5b0f38b9de-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/6">
     <meta name="twitter:title" content="Full Body HIIT from @spinsyddy">
     <meta name="twitter:description" content="This mornings IG LIVE went a little something like this. The last 5 minutes were CHALLENGING!
@@ -63,7 +68,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/2110625039.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/f47e8872-f264-4958-a46a-db5b0f38b9de-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/f47e8872-f264-4958-a46a-db5b0f38b9de-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
