--- a/workouts/12.html
+++ b/workouts/12.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>sandysklarxfit's Leg Work</title>
     <meta name="description" content="Leg Work from @sandysklarxfit: " />
     <meta name="author" content="@sandysklarxfit (FITNESS Pro | FOOD Coach\n📍OWNER of @prescriptive.fitness\n💫 SANDY15 @optimumnutrition\n💍 #FITMOM\n⬇️ MY LINKS ⬇️)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Leg Work from @sandysklarxfit">
     <meta property="og:description" content="My legs are feelin’ pretty solid after this sequence. Quads, hammies and glutes were on 🔥
 Upper body and core got a little hit too 😉
 ">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/10933664297.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/83c7f25b-ac73-4495-8aeb-67bef124e230-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/12">
     <meta name="twitter:title" content="Leg Work from @sandysklarxfit">
     <meta name="twitter:description" content="My legs are feelin’ pretty solid after this sequence. Quads, hammies and glutes were on 🔥
@@ -63,7 +68,7 @@ Upper body and core got a little hit too 😉
             poster="https://verkout-app-media.s3.amazonaws.com/images/10933664297.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/83c7f25b-ac73-4495-8aeb-67bef124e230-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/83c7f25b-ac73-4495-8aeb-67bef124e230-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
