--- a/workouts/20.html
+++ b/workouts/20.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>tay_macfit's No Equipment Cardio + Core</title>
     <meta name="description" content="No Equipment Cardio + Core from @tay_macfit: " />
     <meta name="author" content="@tay_macfit (MACFIT, Quick & Effective Workouts. \n• BS in Public Health & CPT through ACE\n#iam1stphorm\n@ptulaactive TAYLOR)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="No Equipment Cardio + Core from @tay_macfit">
     <meta property="og:description" content="A body weight workout to get that heart rate up followed by some abs! This one is so so good.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/11209990018.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/9df5d86d-5311-4b15-90ef-4443bc6d91d3-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/20">
     <meta name="twitter:title" content="No Equipment Cardio + Core from @tay_macfit">
     <meta name="twitter:description" content="A body weight workout to get that heart rate up followed by some abs! This one is so so good.">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/11209990018.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/9df5d86d-5311-4b15-90ef-4443bc6d91d3-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/9df5d86d-5311-4b15-90ef-4443bc6d91d3-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
