--- a/workouts/29.html
+++ b/workouts/29.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>natacha.oceane's Full Body Burn 🔥</title>
@@ -10,9 +10,14 @@
 🏃‍♀️ IronMan & Sprinter
 🦈 Gymshark 🎥 Translating science on YouTube
 My programmes approved by GB Olympic expert ⬇️)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Full Body Burn 🔥 from @natacha.oceane">
     <meta property="og:description" content="These 7 movements will hit your legs, glutes, core and upper body while keeping you moving athletically on top of just getting a burn going 🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/0df05f1f-8bca-4512-857c-01688bfc7a99-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/29">
     <meta name="twitter:title" content="Full Body Burn 🔥 from @natacha.oceane">
     <meta name="twitter:description" content="These 7 movements will hit your legs, glutes, core and upper body while keeping you moving athletically on top of just getting a burn going 🔥">
@@ -62,7 +67,7 @@ My programmes approved by GB Olympic expert ⬇️)" />
             poster="https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/0df05f1f-8bca-4512-857c-01688bfc7a99-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/0df05f1f-8bca-4512-857c-01688bfc7a99-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
