--- a/workouts/8.html
+++ b/workouts/8.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>natacha.oceane's FULL BODY work-every-muscle</title>
     <meta name="description" content="FULL BODY work-every-muscle from @natacha.oceane: " />
     <meta name="author" content="@natacha.oceane (👩‍🎓 Biophysicist @ UCL 🧬\n🏃‍♀️ IronMan & Sprinter\n🦈 Gymshark 🎥 Translating science on YouTube\nMy programmes approved by GB Olympic expert ⬇️)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="FULL BODY work-every-muscle from @natacha.oceane">
     <meta property="og:description" content="We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/c8585faa-3037-4fbf-a023-51a912ece18f-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/8">
     <meta name="twitter:title" content="FULL BODY work-every-muscle from @natacha.oceane">
     <meta name="twitter:description" content="We’ve got 6 movements hitting the lower body, upper body + core = a happy mind and lots of feel good when it’s all done.">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/1967316049.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/c8585faa-3037-4fbf-a023-51a912ece18f-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/c8585faa-3037-4fbf-a023-51a912ece18f-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
