--- a/workouts/9.html
+++ b/workouts/9.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <!-- Basic Page Needs
+    <!-- Basic Page Need
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8" />
     <title>paulsklarxfit's Kettlebell Flow</title>
     <meta name="description" content="Kettlebell Flow from @paulsklarxfit: " />
     <meta name="author" content="@paulsklarxfit (Professional Trainer \nFormer World Ranked Pro Duathlete\nOwner @prescriptive.fitness\n@sandysklarxfit \n⬇️SUBSCRIBE to PaulSklarXFit365 ⬇️)" />
+    <meta property="og:site_name" content="Verkout">
+    <meta property="og:type" content="video">
     <meta property="og:title" content="Kettlebell Flow from @paulsklarxfit">
     <meta property="og:description" content="Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥">
     <meta property="og:image" content="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg">
+    <meta property="og:video" content="https://verkout-app-media.s3.amazonaws.com/videos/2562bd2d-4e8c-4f93-afab-813bb4e180df-composite-share.mp4">
+    <meta property="og:video:width" content="1080">
+    <meta property="og:video:height" content="1920">  
     <meta property="og:url" content="https://www.verkout.com/workouts/9">
     <meta name="twitter:title" content="Kettlebell Flow from @paulsklarxfit">
     <meta name="twitter:description" content="Looking for some Cardio, Mobility, and Muscle all wrapped up into one? ⁣Try this Kettlebell Flow by itself or at the end of any workout🔥">
@@ -59,7 +64,7 @@
             poster="https://verkout-app-media.s3.amazonaws.com/images/3231385713.jpg"
             data-setup='{ "loop": true, "controls": true}'
           >
-            <source src="https://verkout-app-media.s3.amazonaws.com/videos/2562bd2d-4e8c-4f93-afab-813bb4e180df-composite.mp4" type="video/mp4" />    
+            <source src="https://verkout-app-media.s3.amazonaws.com/videos/2562bd2d-4e8c-4f93-afab-813bb4e180df-composite-share.mp4" type="video/mp4" />    
             <p class="vjs-no-js">
               To view this video please enable JavaScript, and consider upgrading to a
               web browser that
