--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     
     <section>
       <h4 class="bold">FOR THE OVERWHELMED</h4>
-      <h5 class="cozy">There are countless great apps, gyms, trainers, and meal plans that work if you're consistent. But where to start? Verkout makes it easy to dip your toe and <span class="bold">see what's out there</span>. Explore, test, then dive in.</h5>      
+      <h5 class="cozy">There are countless great apps, gyms, trainers, and meal plans that work if you're consistent. But where to start? Verkout makes it easy to dip your toe and <span class="bold">see what's out there</span>. Explore, test, then dive in.</h5>
 
       <h4 class="bold rightAligned">FOR THE UNINSPIRED</h4>
       <h5 class="cozy rightAligned">If you've fallen off the fitness wagon -- or you never got on -- this app is the <span class="bold">best place to start</span>. NO SIGNUP means no hurdle or obligation. Just install the app and go.</h5>
@@ -83,7 +83,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
 
     <section class="footer centered">      
       <p>
-        Our iOS app was built by a small team in Austin, TX.<br />Android is up next.
+        The iOS app was built by our<br/>small team in Austin, TX.<br/><br/>Android is up next.
       </p>      
       <div class="social">
         <a href="https://instagram.com/verkoutapp" target=_"><img class="mediumWidth" src="assets/images/icon-ig.png" /></a>
