--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <div class="container">
     <section class="header">
       <h2>Verkout</h2>
-      <h4>the best <span class="bold">first step</span> in fitness.</h4>
+      <h4>is the best <span class="bold">first step</span> in fitness.</h4>
     </section>
 
     
