--- a/index.html
+++ b/index.html
@@ -52,18 +52,22 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
   <div class="container">
     <section class="header">
       <h2>Verkout</h2>
-      <h4>is a fitness app.</h4>      
+      <h4>the daily Instagram workout</h4>      
     </section>
 
     <section>
-      <h4>We're in stealth mode, for now.</h4>
+      <h4>
+        No signup.<br/>
+        No fluff.<br/>
+        Just one <span class="bold">20-to-30-minute full-body workout</span> -- pulled from the world of Instagram -- each day.</h4>
     </section>
 
     
 
-    <section class="footer centered">      
-      <p>
-        Our small team in Austin, TX is building something great.
+    <section class="footer centered">
+      <p>The iOS app is built by<br/>our small team in Austin, TX.<br/>
+        <br/>
+        Android is up next.
       </p>      
       <div class="social">
         <a href="https://instagram.com/verkoutapp" target=_"><img class="mediumWidth" src="assets/images/icon-ig.png" /></a>
