--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
         Just one <span class="bold">20-to-30-minute full-body workout</span> -- pulled from the world of Instagram -- each day.</h4>
     </section>
 
+    <section>
+      <h4>
+        Have you done your Verkout today?
+    </section>
+
+    
+
     
 
     <section class="footer centered">
