--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "Verkout: The Workouts of Instagram"
-description: "Verkout showcases workouts from the fitness personalities of Instagram and promotes the top products they endorse. No signup. No fluff. Just workouts and a world of fitness inspiration."
+title: "Verkout: the daily Instagram workout."
+description: "No signup. No fluff. Just one 20-to-30-minute full-body workout -- pulled from the fitness professionals of Instagram -- each day."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
@@ -59,7 +59,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
       <h4>
         No signup.<br/>
         No fluff.<br/>
-        Just one <span class="bold">20-to-30-minute full-body workout</span> -- pulled from the world of Instagram -- each day.</h4>
+        Just one <span class="bold">20-to-30-minute full-body workout</span> -- pulled from the fitness professionals of Instagram -- each day.</h4>
     </section>
 
     <section>
