--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Verkout: the daily Instagram workout."
+title: "Verkout: the daily Instagram workout"
 description: "No signup. No fluff. Just one 20-to-30-minute full-body workout each day, pulled from the fitness professionals of Instagram."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
