--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Verkout: the daily Instagram workout"
-description: "No signup. No fluff. Just one 20-to-30-minute full-body workout each day, pulled from the fitness professionals of Instagram."
+description: "No signup. No friction. Verkout showcases one Instagram fitness professional each day, their 20-to-30-minute full-body workout, and the top products they endorse."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
 
@@ -55,11 +55,21 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
       <h4>the daily Instagram workout</h4>      
     </section>
 
-    <section>
+    <section class="inset">
       <h4>
-        No signup.<br/>
-        No fluff.<br/>
-        Just one <span class="bold">20-to-30-minute full-body workout</span> each day, pulled from the fitness professionals of Instagram.</h4>
+        Verkout showcases <span class="bold">one Instagram fitness professional</span> each day, their <span class="bold">20-to-30-minute full-body workout</span>, and the top <span class="bold">products they endorse</span>.</h4>
+    </section>
+
+
+    <section class="comfy">	
+      <h4 class="bold">FOR THE OVERWHELMED</h4>	
+      <h5 class="cozy">There are countless great apps, gyms, trainers, and meal plans that work if you're consistent. But where to start? Verkout makes it easy to dip your toe and <span class="bold">see what's out there</span>. Explore, test, then dive in.</h5>	
+
+      <h4 class="bold rightAligned">FOR THE UNINSPIRED</h4>	
+      <h5 class="cozy rightAligned">If you've fallen off the fitness wagon -- or you never got on -- this app is the <span class="bold">best place to start</span>. NO SIGNUP means no friction or obligation. Just install the app and go.</h5>	
+
+      <h4 class="bold comfy">FOR THE BORED</h4>	
+      <h5 class="cozy">Hit a plateau in your fitness level? If you're doing the same thing, week after week, use Verkout to <span class="bold">find new inspiration</span> and mix it up.</h5>	
     </section>
 
     <section>
