--- a/support.html
+++ b/support.html
@@ -4,78 +4,101 @@ title: "Verkout Support Center"
 description: "Need help with something Verkout-related? Let us know."
 logo: "https://www.verkout.com/assets/images/logo-1024.png"
 ---
+<!---   NEW  -->
 
 <head>
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8" />
   <title>{{ title }}</title>  
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="{{ page.description }}" />
-    <meta name="author" content="Verkout" />
-    <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:description" content="{{ page.description }}">
-    <meta property="og:image" content="{{ page.logo }}">
-    <meta property="og:url" content="https://www.verkout.com">
-    <meta name="twitter:title" content="{{ page.title }}">
-    <meta name="twitter:description" content="{{ page.description }}">
-    <meta name="twitter:image" content="{{ page.logo }}">
-    <meta name="twitter:card" content="summary_large_image">
+  <meta name="author" content="Verkout" />
+  <meta property="og:title" content="{{ page.title }}">
+  <meta property="og:description" content="{{ page.description }}">
+  <meta property="og:image" content="{{ page.logo }}">
+  <meta property="og:url" content="https://www.verkout.com">
+  <meta name="twitter:title" content="{{ page.title }}">
+  <meta name="twitter:description" content="{{ page.description }}">
+  <meta name="twitter:image" content="{{ page.logo }}">
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />  
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link
-    href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
-    rel="stylesheet"
-    type="text/css"
-  />
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="/assets/css/normalize.css" />
-  <link rel="stylesheet" href="/assets/css/skeleton.css" />
+  <link rel="stylesheet" href="/assets/css/base.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet" type="text/css">  
   <link rel="stylesheet" href="/assets/css/main.css" />
 
-  <!-- Scripts
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <style>
+    html {
+      background-color: #000000;
+    }
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    .palette {
+      background-color: #000000
+    }
+
+    .palette .primary-color {
+      color: #F2D308
+    }
+
+    .palette .secondary-color {
+      color: #DDDDDD
+    }
+
+    .palette .accent-bg {
+      background-color: #F2D308
+    }
+
+    .palette .secondary-bg {
+      background-color: #2898FB
+    }
+
+    .palette .svg-fill {
+      fill: #FFFFFF
+    }
+  </style>
 </head>
-<body id="home">
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <section class="header">
-      <h2>Verkout Support</h2>
-      <h4>Have a problem? We can help.</h4>
-    </section>
 
-    <section class="main">
-      <h4>Email</h4>
-      <h5><a href="mailto:support@verkout.com">support@verkout.com</a></h5>
-    </section>
-
-    <section class="main">
-      <h4>Phone</h4>
-      <h5>+1 (505) 609-VRKT / +1 (505) 609-8758</h5>
-    </section>
-
-    <section class="footer centered">
-      <h4>- coming soon -</h4>
-      <p>
-        Please hold. Our small team in Austin, TX is building something great.
-      </p>
-      <div class="social">
-        <a href="https://instagram.com/verkoutapp" target=_"><img class="mediumWidth" src="assets/images/icon-ig.png" /></a>
-        <a href="https://twitter.com/verkoutapp" target=_"><img class="mediumWidth" src="assets/images/icon-twitter.png" /></a>
+<body>
+  <div class="palette">
+    <!---->
+    <header class="header">
+      <div class="container-lrg">
+        <div class="flex col-12 spread">
+          <a href="index.html" class="logo logo__white">
+            <img src="/assets/images/logo-1024.png" alt="Verkout Logo">
+          </a>
+          <span class="secondary-color">
+            <a href="mailto:hello@verkout.com" class="nav-link secondary-color">Contact</a> <span class="secondary-color">·</span>
+            <a href="mailto:support@verkout.com" class="nav-link secondary-color">Support</a>
+          </span>
+        </div>
+      </div>
+    </header>
+    <section class="section">
+      <div class="container-lrg flex">
+        <div class="flex flex-column col-6 center-vertical mobile-text-center mb40">
+          <h1 class="heading primary-color">Verkout Support Center</h1>
+          <h2 class="subheading secondary-color mt20">
+            Have a problem? We can help.</h2>
+          <h2 class="subheading secondary-color mt20">
+            Email us at <a href="mailto:support@verkout.com" class="primary-color">support@verkout.com</a>.</h2>
+        </div>
       </div>
     </section>
-  </div>  
-  <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
+    
+
+    <section class="section">
+      <div class="container-lrg flex">
+        <div class="flex flex-column col-12 text-center mobile-text-center mb40">
+          <h2 class="primary-color bold">Have you done your Verkout today?</h2>
+          <p class="secondary-color comfy">The iOS app is built by<br/>our small team in Austin, TX.</p>
+          <p class="secondary-color"><br/>Android is up next.</p> 
+          <div class="social">
+            <br/>
+            <a href="https://instagram.com/verkoutapp" target=_" ><img class="logoIg mediumWidth" src="/assets/images/logo-ig-white.png" /></a>
+            <a href="https://twitter.com/verkoutapp" target=_"><img class="logoTwitter mediumWidth" src="/assets/images/logo-twitter-white.png" /></a>
+          </div>
+        </div>
+      </div>                
+    </section>
+  </div>    
 </body>
