Tweak the linking between index and support.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
     <header class="header">
       <div class="container-lrg">
         <div class="flex col-12 spread">
-          <a class="logo logo__white">
+          <a href="index.html" class="logo logo__white">
             <img src="/assets/images/logo-1024.png" alt="Verkout Logo">
           </a>
           <span class="secondary-color">
