--- a/support.html
+++ b/support.html
@@ -67,7 +67,7 @@ logo: "https://www.verkout.com/assets/images/logo-1024.png"
           </a>
           <span class="secondary-color">
             <a href="mailto:hello@verkout.com" class="nav-link secondary-color">Contact</a> <span class="secondary-color">·</span>
-            <a href="mailto:support@verkout.com" class="nav-link secondary-color">Support</a>
+            <a href="support.html" class="nav-link secondary-color">Support</a>
           </span>
         </div>
       </div>
